# memgraph

./: .arcconfig  .arclint  .clang-format  .clang-tidy  .editorconfig  .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  .sonarcloud.properties  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Doxyfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  P1_DOUBLE_RESUME_RACE_ANALYSIS.md  P2_UNSAFE_COROUTINE_DESTRUCTION.md  P3_STALE_SUSPENDED_HANDLE.md  P4_SILENT_TASK_DROPPING_DEADLOCK.md  P5_ORPHANED_CLOSURE_RACE.md  P6_PROGRESS_AWAITABLE_RAW_HANDLE.md  P7_TASK_COLLECTION_TIMEOUT.md  PARALLEL_COROUTINE_ANALYSIS_TRACKER.md  PARALLEL_ISSUES_CROSS_REFERENCE.md  PR_REVIEW_defunct_recovery.md  README.md  VIRTUAL_GRAPH_REDESIGN_PLAN.md  apollo_archives.py  apollo_archives.yaml  apollo_build.yaml  build.sh  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.py  (+52 more)
experimental/distributed/: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  config  init  main-client.cpp  main.cpp  start_main.py
include/mgp/: README.md  _mgp.py  pyproject.toml
libs/: .gitignore  CMakeLists.txt  __main.cpp  antlr4.10.1.patch  antlr4.patch  cleanup.sh  jemalloc-oversize_threshold.patch  jemalloc.cmake  librdtsc.patch  nuraft2.1.0.patch  pulsar-client.patch  pulsar.patch  rocksdb-8.0.0.patch  rocksdb.patch  sbom.json  setup.sh  spdlog.patch  usearch-tombstone-fix.patch  usearch.patch
mage/: CMakeLists.txt  Dockerfile.centos-9  Dockerfile.cugraph  Dockerfile.release  Dockerfile.rpm  README.md  install_python_requirements.sh  install_runtime_requirements.sh  make-dev-container.sh  setup
mage/cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
mage/python/: .coverage  .coveragerc  .flake8  cross_database.py  cuopt.py  date.py  embeddings.py  export_util.py  gnn.py  graph_coloring.py  igraphalg.py  import_util.py  json_util.py  kmeans.py  link_prediction.py  llm.py  llm_util.py  meta_util.py  mg_semantics.py  mgp_igraph.py  mgp_networkx.py  migrate.py  node_classification.py  nxalg.py  pyg.py  pytest.ini  requirements-gpu.txt  requirements.txt  set_cover.py  temporal.py  tgn.py  tsp.py  union_find.py  vrp.py  wkt_util.py
mage/rust/: CMakeLists.txt  README.md
mage/scripts/: aggregate_build_tests.py  artifact-name-tag.sh  build-heaptrack.sh  build.sh  container-build-heaptrack.sh  container-build.sh  container-package-deb.sh  container-test.sh  cve_message.py  daily_build_vars.py  format_cve_table.py  get_mage_commit.sh  get_tag.sh  install_python_requirements.sh  install_runtime_requirements.sh  pr_build_vars.py  scan_languages.py  scan_memgraph.py  test-mirrors.sh  update_cve_db.py  validate_cugraph_algorithms.py  verify_download_url.sh  wait-for-docker-images.sh  workflow_image_setup.py
mage/tests/: run_e2e_correctness_tests.sh  run_e2e_migration_tests.sh  test_e2e  test_unit
mgcxx/: .gitignore  CMakeLists.txt  LICENSE  README.md
mgcxx/text_search/: CMakeLists.txt  Cargo.toml  build.rs  ci.sh  test_bench.cpp  test_stress.cpp  test_unit.cpp  test_util.hpp  text_search.hpp
poc/: CMakeLists.txt  add_double.cpp  allocator_benchmark.cpp  allocator_test.cpp  astar.cpp  astar_query.cpp  basic_bloom_filter.cpp  basic_bloom_filter_benchmark.cpp  block_allocator_test.cpp  bloom_filter.hpp  bloom_map_concurrent.cpp  bounded_spsc_queue.hpp  csv_import.cpp  example.cpp  hp.hpp  isolation.cpp  measure_time.cpp  mpsc_queue.hpp  option_ptr.hpp  profile.cpp  profile.hpp  ptr_int.hpp  ptr_int_test.cpp  rh_hashmap.hpp  rh_hashmap_test.cpp  size_aligment.cpp  stack_allocator_test.cpp  timer.hpp  tool.cpp  union_find.hpp  union_find_test.cpp
poc/isolation/: db.hpp  header.cpp  header.hpp  isolated.hpp
query_modules/: CMakeLists.txt  chrono.py  convert.c  convert.cpp  convert.py  date.py  example.c  example.cpp  example.py  example_cpp_transformation.cpp  example_transformation.cpp  generic_transformation.cpp  graph_analyzer.py  llm.py  mgp_mock_example.py  mgp_networkx.py  mgps.py  mgps_cpp.cpp  nxalg.py  pagerank.py  schema.cpp  test_enterprise.py  testerino.cpp  text_search.cpp  text_search_module.cpp  vector_search_module.cpp  wcc.py
release/: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  LICENSE_COMMUNITY.md  LICENSE_ENTERPRISE.md  LICENSE_ENTERPRISE_TRIAL.md  README.md  alpha.dockerfile  alpha.sh  alpha_interpreter.dockerfile  alpha_interpreter.sh  barrier.dockerfile  barrier.sh  beta.sh  build_compiler  build_interpreter  community.dockerfile  cpack_build_mgconsole.cmake  get_version.py  install_mgconsole.cmake  logrotate.conf  logrotate_audit.conf  logrotate_community.conf  logrotate_enterprise.conf  memgraph.service  package_deploy  package_docker  web_browser
src/: CMakeLists.txt  SessionHL.cpp  SessionHL.hpp  config.hpp  copy_hardcoded_queries.cpp  helpers.hpp  memgraph.cpp  memgraph_bolt.cpp  memgraph_distributed.cpp  memgraph_ha.cpp  memgraph_http.cpp  memgraph_init.cpp  memgraph_init.hpp  memgraph_v3.cpp  mg_import_csv.cpp  version.hpp.in  wat.cpp
tests/: .clang-tidy  CMakeLists.txt  apollo_runs.py  apollo_runs.yaml  client-stress.sh  cypher_traversal.cpp  db_index.cpp  dummy.cpp  enterprise_check.sh.in  lockfree_hashmap.cpp  requirements.txt  setup.sh  test_commit_args_helper.hpp  timer.cpp  util.sh
tests/e2e/: x.sh  (+21 more)
tools/: .gitignore  CMakeLists.txt  aggregate_build_tests.py  analyze_ftime_trace.py  analyze_pch_gain.py  analyze_rpc_calls  apollo_build  apollo_generate  arc-clang-format  arc-clang-tidy  build-heaptrack.sh  check-build-system  check_diff.bash  check_diff.py  check_s3_daily_release.py  clean_conan.sh  clean_conan_docker.sh  coverage_binary  coverage_memgraph  csv_to_snapshot  csv_to_snapshot.dockerfile  diff_setup.py  docker_cleanup.sh  gen_collocated_dataset.py  get_daily_build_images.py  get_daily_commit_hash.py  get_daily_issu_images.py  get_latest_tag.sh  git-clang-format  git-clang-tidy  header-checker.py  issu_image_type.py  lcp  list_ci_runners.py  lsan.supp  manage_distributed_card_fraud  memory_usage  memory_usage.py  mg_import_csv.dockerfile  neo_to_memgraph  (+21 more)
(+11921 files in other folders)
